--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.google.okhttp:okhttp:20120626'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
